--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -3196,7 +3196,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kosmetik"
+            "value" : "Kosmetika"
           }
         },
         "zh-Hans" : {
