Use metal screen rendering again to see if it fixes lag problem.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -831,6 +831,9 @@
         }
       }
     },
+    "A low maximum screen FPS reduces power usage." : {
+
+    },
     "About" : {
       "localizations" : {
         "de" : {
@@ -6252,6 +6255,9 @@
           }
         }
       }
+    },
+    "Maximum screen FPS" : {
+
     },
     "Message" : {
       "localizations" : {
