--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -3199,7 +3199,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kosmetika"
+            "value" : "Utseende"
           }
         },
         "zh-Hans" : {
